syntax = "proto3";

package payments;

import "commons.proto";
import "google/protobuf/empty.proto";

message CreateBitsoWireWithdrawalRequest {
  string userId = 1;
  int32 amount = 2;
  string asset = 3;
  string currency = 4;
  string externalAccountId = 5;
  string originId = 6;
  optional string wireMessage = 7;
  optional string method = 8;   // Optional, defaults to bridge
  optional string network = 9;  // Optional, defaults to bridge
  optional string protocol = 10; // Optional, defaults to wire
}

message GetBitsoWireWithdrawalRequest {
  string id = 1;
}

message GetBitsoWireWithdrawalsRequest {
  optional string userId = 1;
  optional string bitsoId = 2;
  optional string status = 3;
  optional int32 limit = 4;
  optional int32 skip = 5;
}

message GetBitsoWireWithdrawalsResponse {
  repeated commons.WithdrawalIntance data = 1;
  int32 count = 2;
  int32 skip = 3;
  int32 limit = 4;
}

message FetchBitsoWireWithdrawalRequest {
  string id = 1;
}

message FetchBitsoWireWithdrawalsResponse {
  repeated commons.WithdrawalIntance data = 1;
}

service PaymentsService {
  rpc CreateBitsoWireWithdrawal(CreateBitsoWireWithdrawalRequest) returns (commons.WithdrawalIntance) {}
  rpc GetBitsoWireWithdrawals(GetBitsoWireWithdrawalsRequest) returns (GetBitsoWireWithdrawalsResponse) {}
  rpc GetBitsoWireWithdrawal(GetBitsoWireWithdrawalRequest) returns (commons.WithdrawalIntance) {}
  rpc FetchBitsoWireWithdrawal(FetchBitsoWireWithdrawalRequest) returns (commons.WithdrawalIntance) {}
  rpc FetchBitsoWireWithdrawals(google.protobuf.Empty) returns (FetchBitsoWireWithdrawalsResponse) {}
}

